chore: 調整工具類和新增測試資料